--- a/src/app/pages/supplier/order-detail/order-detail.component.css
+++ b/src/app/pages/supplier/order-detail/order-detail.component.css
@@ -1,196 +1,286 @@
 .back-btn a{
-    text-decoration: none;
-    background-color: black;
-    width: 40px;
-    height: 40px;
+  text-decoration: none;
+  background-color: black;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+table {
+    width: 100%;
+    height: 192px;
+    margin: auto;
+    border-radius: 20px;
+    border-collapse: collapse;
+}
+
+table thead{
+    background-color: #2A2A2C;
+    color: #F7F7F7;
+}
+
+table thead tr th:last-child{
+    border-top-left-radius: 20px;
+    border-left-style: hidden;
+    border-top-style: hidden;
+}
+table thead tr th:first-child{
+    border-top-right-radius: 20px;
+    border-right-style: hidden;
+    border-top-style: hidden;
+}
+
+table tbody tr td:last-child{
+    border-bottom-left-radius: 20px;
+}
+table tbody tr td:first-child{
+    border-bottom-right-radius: 20px;
+}
+
+table tbody,table thead{
+    vertical-align: middle !important;
+    text-align: center;
+    height: 93px;
+    font-size: 20px;
+    font-family: "Tajawal-Bold";
+    font-weight: 700;
+}
+
+th, td {
+    width: 100px;
+    border: 1px solid #9F9F9F;
+  }
+
+  .border-left{
+    border-left: 2px solid #D6D6D6;
+  }
+
+  .countdown-container .left-border::after{
+    content: "" !important;
+    width: 2px;
+    height: 78px;
+    background-color: #D6D6D6;
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+  }
+
+
+.wizard {
+  display: grid;
+  grid-template-columns: 320px 1fr;
+  font-family: "Roboto", sans-serif;
+}
+
+.process {
+  align-self: center;
+}
+.process ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+.process ul li.step .name {
+  display: flex;
+  align-items: center;
+  color: #838383;
+}
+/* .process ul li.step .name:before {
+  content: "";
+  width: 18px;
+  height: 18px;
+  display: inline-block;
+  border-radius: 50%;
+  margin-right: 8px;
+  background: #ddd;
+} */
+.process ul li.step.completed .name , .process ul li.step.current .name  {
+  color: #2A2A2C !important;
+}
+.process ul li.step.current .name .pic-icon , .process ul li.step.completed .name .pic-icon{
+    background: black !important;
     border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    color: #F7F7F7 !important;
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  table {
-      width: 100%;
-      height: 192px;
-      margin: auto;
-      border-radius: 20px;
-      border-collapse: collapse;
-  }
-  
-  table thead{
-      background-color: #2A2A2C;
-      color: #F7F7F7;
-  }
-  
-  table thead tr th:last-child{
-      border-top-left-radius: 20px;
-      border-left-style: hidden;
-      border-top-style: hidden;
-  }
-  table thead tr th:first-child{
-      border-top-right-radius: 20px;
-      border-right-style: hidden;
-      border-top-style: hidden;
-  }
-  
-  table tbody tr td:last-child{
-      border-bottom-left-radius: 20px;
-  }
-  table tbody tr td:first-child{
-      border-bottom-right-radius: 20px;
-  }
-  
-  table tbody,table thead{
-      vertical-align: middle !important;
-      text-align: center;
-      height: 93px;
-      font-size: 20px;
-      font-family: "Tajawal-Bold";
-      font-weight: 700;
-  }
-  
-  th, td {
-      width: 100px;
-      border: 1px solid #9F9F9F;
-    }
-  
-    .border-left{
-      border-left: 2px solid #D6D6D6;
-    }
-  
-    .countdown-container .left-border::after{
-      content: "" !important;
-      width: 2px;
-      height: 78px;
-      background-color: #D6D6D6;
-      position: absolute;
-      left: 0;
-      top: 0;
-      bottom: 0;
-      margin: auto;
-    }
-  
-  
-  .wizard {
-    display: grid;
-    grid-template-columns: 320px 1fr;
-    font-family: "Roboto", sans-serif;
-  }
-  
-  .process {
-    align-self: center;
-  }
-  .process ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-  }
-  .process ul li.step .name {
-    display: flex;
-    align-items: center;
-    color: #838383;
-  }
-  /* .process ul li.step .name:before {
-    content: "";
-    width: 18px;
-    height: 18px;
-    display: inline-block;
+}
+
+.process ul li.step .name .pic-icon {
+    background: #FFFFFF;
     border-radius: 50%;
-    margin-right: 8px;
-    background: #ddd;
-  } */
-  .process ul li.step.completed .name , .process ul li.step.current .name  {
-    color: #2A2A2C !important;
+    width: 35px;
+    height: 35px;
+    color: #9F9F9F;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+/* .process ul li.step.completed .name:before {
+  content: "✓";
+  color: white;
+  font-size: 0.8em;
+  text-align: center;
+  background: #005c9f;
+} */
+
+/* .process ul li.step.current .name:before {
+  background: #e74700;
+  box-shadow: 0 0 18px #ff9362;
+  animation: 1750ms linear infinite pulse;
+} */
+.process ul li.step:not(:last-child):after {
+    height: 281px;
+    width: 6px;
+    content: "";
+    display: block;
+    background-color: #FFFFFF;
+    margin-right: 15px;
+}
+.process ul li.step.completed:not(:last-child):after {
+  background-color: #2A2A2C;
+}
+.process.done ul li.step .name {
+  color: #33673b;
+}
+.process.done ul li.step .name:before {
+  background: #33673b;
+  box-shadow: none;
+  content: "✓";
+  color: white;
+  font-size: 0.8em;
+  text-align: center;
+}
+.process.done ul li.step:not(:last-child):after {
+  background-color: #33673b;
+  box-shadow: 0 0 8px #88c492;
+}
+
+@keyframes pulse {
+  0% {
+    box-shadow: 0 0 2px #ff9362;
   }
-  .process ul li.step.current .name .pic-icon , .process ul li.step.completed .name .pic-icon{
-      background: black !important;
-      border-radius: 50%;
-      width: 35px;
-      height: 35px;
-      color: #F7F7F7 !important;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-  }
-  
-  .process ul li.step .name .pic-icon {
-      background: #FFFFFF;
-      border-radius: 50%;
-      width: 35px;
-      height: 35px;
-      color: #9F9F9F;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-  }
-  /* .process ul li.step.completed .name:before {
-    content: "✓";
-    color: white;
-    font-size: 0.8em;
-    text-align: center;
-    background: #005c9f;
-  } */
-  
-  /* .process ul li.step.current .name:before {
-    background: #e74700;
+  80% {
     box-shadow: 0 0 18px #ff9362;
-    animation: 1750ms linear infinite pulse;
-  } */
-  .process ul li.step:not(:last-child):after {
-      height: 281px;
-      width: 6px;
-      content: "";
-      display: block;
-      background-color: #FFFFFF;
-      margin-right: 15px;
   }
-  .process ul li.step.completed:not(:last-child):after {
-    background-color: #2A2A2C;
+  100% {
+    box-shadow: 0 0 2px #ff9362;
   }
-  .process.done ul li.step .name {
-    color: #33673b;
-  }
-  .process.done ul li.step .name:before {
-    background: #33673b;
-    box-shadow: none;
-    content: "✓";
-    color: white;
-    font-size: 0.8em;
-    text-align: center;
-  }
-  .process.done ul li.step:not(:last-child):after {
-    background-color: #33673b;
-    box-shadow: 0 0 8px #88c492;
-  }
-  
-  @keyframes pulse {
-    0% {
-      box-shadow: 0 0 2px #ff9362;
-    }
-    80% {
-      box-shadow: 0 0 18px #ff9362;
-    }
-    100% {
-      box-shadow: 0 0 2px #ff9362;
-    }
-  }
-  
-  .col-container {
-      width: 100%;
-      height: 200px;
-      border: 2px solid #9F9F9F;
-      border-radius: 20px;
-      padding: 25px 65px;
-  }
-  
-  .col-container .btn-action .cancel-btn{
-      width: 339px;
-      height: 64px;
-      background: #1B1C1E 0% 0% no-repeat padding-box;
-      border-radius: 8px;
-      color: #F7F7F7;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-  }
+}
+
+.col-container {
+    width: 100%;
+    height: max-content;
+    min-height: 200px;
+    border: 2px solid #9F9F9F;
+    border-radius: 20px;
+    padding: 25px 3%;
+}
+
+.col-container .btn-action .arrived-btn , .col-container .btn-action .delievery-btn , .col-container .btn-action .send-rating-btn , .btn-action .confirm-payment-btn{
+    width: 90%;
+    height: 64px;
+    background: #1B1C1E 0% 0% no-repeat padding-box;
+    border-radius: 8px;
+    color: #F7F7F7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.col-container .btn-action .download-reciet-btn{
+    width: 90%;
+    height: 68px;
+    background: #F7F7F7 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #00000029;
+    border-radius: 8px;
+    color: #B71212;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.col-container .img-detail .image-container{
+  cursor: pointer;
+}
+
+.col-container .img-detail .image-container img{
+  width: 200px;
+  height: 142px;
+  box-shadow: 0px 3px 6px #00000029;
+  border-radius: 8px;
+}
+
+.col-container .img-detail .image-container .img-overlay{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 36px;
+  background: #00000048 0% 0% no-repeat padding-box;
+  box-shadow: 0px 3px 6px #00000029;
+  opacity: 1;
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+}
+
+.col-container .img-detail ::ng-deep .p-dialog {
+  box-shadow: none !important;
+}
+
+
+.col-container .img-detail ::ng-deep .p-dialog-header {
+  justify-content: start !important;
+  padding-left: 0 !important;
+  padding-right: 0 !important; 
+}
+
+.col-container .img-detail ::ng-deep .p-dialog-content {
+  padding: 0 !important;
+}
+
+.col-container .img-detail ::ng-deep .p-dialog .p-dialog-header , .col-container .img-detail ::ng-deep .p-dialog .p-dialog-content{
+  background:  transparent !important;
+}
+
+.col-container .img-detail ::ng-deep .p-dialog .p-dialog-header .p-dialog-header-icon {
+  color: white !important;
+  background: black !important;
+}
+
+.col-container .upload-img-detail .upload-image-container label{
+  width: 128px;
+  height: 44px;
+  background: #2A2A2C 0% 0% no-repeat padding-box;
+  box-shadow: 0px 7px 12px #2A2A2C4E;
+  border-radius: 33px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #F7F7F7;
+  cursor: pointer;
+}
+
+.col-container .upload-img-detail .upload-image-container input{
+  display: none;
+}
+
+::ng-deep .p-rating:not(.p-disabled):not(.p-readonly) .p-rating-icon:hover ,::ng-deep .p-rating .p-rating-icon.p-rating-icon-active  {
+  color: #F7CA36 ;
+}
+
+::ng-deep .p-rating .p-rating-icon{
+  color: black ;
+}
+
+::ng-deep .p-rating .p-rating-icon.p-icon {
+  width: 25px;
+  height: 25px;
+}
