--- a/src/app/pages/supplier/order-detail/order-detail.component.html
+++ b/src/app/pages/supplier/order-detail/order-detail.component.html
@@ -27,14 +27,14 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>{{orderData.id}}#</td>
-                            <td>{{orderData.created_at.split('T')[0]}}</td>
-                            <td>{{orderData.location.project_name}}</td>
-                            <td>{{orderData.supplier_product}}</td>
-                            <td>{{orderData.amount}}</td>
-                            <td>{{orderData.client}}</td>
-                            <td>{{orderData.supplier}}</td>
-                            <td>{{orderData.status}}</td>
+                            <td>{{orderData?.id}}#</td>
+                            <td>{{orderData?.created_at.split('T')[0]}}</td>
+                            <td>{{orderData?.location?.project_name}}</td>
+                            <td>{{orderData?.supplier_product}}</td>
+                            <td>{{orderData?.amount}}</td>
+                            <td>{{orderData?.client}}</td>
+                            <td>{{orderData?.supplier}}</td>
+                            <td>{{orderData?.status}}</td>
                         </tr>
                     </tbody>
                 </table>
@@ -49,30 +49,34 @@
                 <div><p class="Tajawal-Bold fs-20 my-0">تفاصيل الطلب:</p></div>
                 <div class="d-flex justify-content-between align-items-center" style="margin-right: 20px;">
                     <p class="Tajawal-Bold fs-20 blue-txt-color my-0"> تكلفة المنتجات:</p>
-                    <p class="Tajawal-Bold fs-20 me-2 my-0">{{orderData.price_before_vat}}</p>
+                    <p class="Tajawal-Bold fs-20 me-2 my-0">{{orderData?.price_before_vat}}</p>
                 </div>
         </div>
         <div style="height: 46px;" class="col-sm-12 col-md-6 col-lg-3 border-left d-flex justify-content-center align-items-center">
             <div class="d-flex justify-content-between align-items-center">
                 <p class="Tajawal-Bold fs-20 blue-txt-color my-0"> ضريبة القيمة المضافة 15% :</p>
-                <p class="Tajawal-Bold fs-20 me-2 my-0">{{orderData.vat}}</p>
+                <p class="Tajawal-Bold fs-20 me-2 my-0">{{orderData?.vat}}</p>
             </div>
         </div>
         <div style="height: 46px;" class="col-sm-12 col-md-6 col-lg-3 border-left d-flex justify-content-center align-items-center">
             <div class="d-flex justify-content-between align-items-center">
                 <p class="Tajawal-Bold fs-20 blue-txt-color my-0">السعر شامل الضريبة:</p>
-                <p class="Tajawal-Bold fs-20 me-2 my-0">{{orderData.total}}</p>
+                <p class="Tajawal-Bold fs-20 me-2 my-0">{{orderData?.total}}</p>
             </div>
         </div>
         <div style="height: 46px;" class="col-sm-12 col-md-6 col-lg-3 d-flex justify-content-center align-items-center">
             <div class="d-flex justify-content-between align-items-center">
                 <p class="Tajawal-Bold fs-20 green-txt-color my-0">التوصيل الى:</p>
-                <p class="Tajawal-Bold fs-20 me-2 my-0">{{orderData.location.project_name}}</p>
+                <p class="Tajawal-Bold fs-20 me-2 my-0">{{orderData?.location?.project_name}}</p>
             </div>
         </div>
     </div>
 
     <div class="row mt-30">
+        <div class="col-sm-12 col-md-6 col-lg-3 d-flex">
+            <p class="Tajawal-Bold fs-20 green-txt-color my-0">حارس المشروع</p>
+            <p class="Tajawal-Bold fs-20 me-2">{{orderData?.location?.guard_mobile}}</p>
+        </div>
         <div class="col-sm-12 col-md-6 col-lg-3 d-flex">
             <p class="Tajawal-Bold fs-20 green-txt-color my-0">وقت التوصيل المحدد</p>
             <p class="Tajawal-Bold fs-20 me-2">٩ ساعات</p>
@@ -80,6 +84,10 @@
         <div class="col-sm-12 col-md-6 col-lg-3 d-flex">
             <p class="Tajawal-Bold fs-20 green-txt-color my-0">وقت الدفع المحدد</p>
             <p class="Tajawal-Bold fs-20 me-2">01/08/2023</p>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-3 d-flex">
+            <p class="Tajawal-Bold fs-20 green-txt-color my-0">موقع المشروع</p>
+            <a style="text-decoration: none;" href="{{orderData?.location?.google_maps_link}}" target="_blank" class="Tajawal-Bold fs-20 me-2">Google Map</a>
         </div>
     </div>
 
@@ -130,45 +138,194 @@
 
         <div class="col-10">
              <!-- Row For Cancel Order -->
+             <div class="row col-container align-items-center">
+                <div class="countdown-container col-sm-12 col-md-12 col-lg-8 d-flex align-items-center">
+                    <div class="arrived-countdown position-relative text-center">
+                        <p class="green-txt-color Tajawal-Bold fs-20 mb-1">الوقت المقدر للتوصيل:</p>
+                        <circle-progress
+                        [radius]="70"
+                        [title]="arrivedRemainigTime ? arrivedRemainigTime : '' "
+                        [percent]="75"
+                        [maxPercent]="100"
+                        [innerStrokeColor]="'#dedede'"
+                        [outerStrokeColor]="'#2A2A2C'"
+                        [outerStrokeWidth]="10"
+                        [innerStrokeWidth]="10"
+                        [space]="-10"
+                        >
+                    </circle-progress>
+                    </div>
 
-             <div class="row">
-                <div class="col-12">
-                    <div class="col-container d-flex justify-content-between align-items-center">
-                        <div class="countdown-container d-flex align-items-center">
-                            <div class="arrived-countdown position-relative text-center px-5 left-border">
-                                <p class="green-txt-color Tajawal-Bold fs-20 mb-1">الوقت المقدر للتوصيل:</p>
-                                <circle-progress
-                                [radius]="60"
-                                [percent]="85"
-                                [maxPercent]="100"
-                                [innerStrokeColor]="'#dedede'"
-                                [outerStrokeColor]="'#2A2A2C'"
-                                [outerStrokeWidth]="10"
-                                [innerStrokeWidth]="10"
-                                [space]="-10"
-                                ></circle-progress>
+                    <div class="reciet-detail w-100 me-5">
+                        <p class="Tajawal-Bold fs-25 blue-txt-color">فاتورة الطلب</p>
+                        <div style="width: 75%;" class="d-flex align-items-center justify-content-between flex-wrap">
+                            <div class="d-flex align-items-center">
+                                <p class="my-0 Tajawal-Bold fs-25 blue-txt-color">تاريخ الإصدار</p>
+                                <p class="my-0 Tajawal-Bold fs-25 me-3">{{orderData?.created_at.split('T')[0]}}</p>
                             </div>
-
-                            <div class="cancelled-countdown text-center px-5">
-                                <p class="text-danger Tajawal-Bold fs-20 mb-1">تنتهي خاصية إلغاء الطلب بعد:</p>
-                                <circle-progress
-                                [radius]="60"
-                                [percent]="50"
-                                [maxPercent]="100"
-                                [innerStrokeColor]="'#dedede'"
-                                [outerStrokeColor]="'#2A2A2C'"
-                                [outerStrokeWidth]="10"
-                                [innerStrokeWidth]="10"
-                                [space]="-10"
-                                ></circle-progress>
+                            <div class="d-flex align-items-center">
+                                <p class="my-0 Tajawal-Bold fs-25 blue-txt-color">وقت الإصدار</p>
+                                <p class="my-0 Tajawal-Bold fs-25 me-3">{{orderData?.created_at.split('T')[1].split('.')[0]}}</p>
                             </div>
-                        </div>
-                        <div class="btn-action">
-                            <button class="cancel-btn Tajawal-Medium fs-25">إلغاء الطلب</button>
+    
                         </div>
                     </div>
                 </div>
+                <div class="btn-action col-sm-12 col-md-12 col-lg-4 my-2 my-lg-0">
+                    <a style="width: 100%;" class="btn download-reciet-btn Tajawal-Bold fs-25">تحميل الفاتورة
+                        <i class="pi pi-download me-5 fs-3"></i>
+                    </a>
+                    <button class="arrived-btn Tajawal-Medium fs-25 mt-30 mx-auto">تم التوصيل</button>
+                </div>
              </div>
+             <!-- End Row For Cancel Order -->
+
+             <!-- Row For Reciet Order -->
+             <div class="row col-container mt-30 align-items-center">
+                <div class="col-sm-12 col-md-12 col-lg-7 reciet-detail">
+                    <p class="Tajawal-Bold fs-25 blue-txt-color">فاتورة الطلب</p>
+                    <div class="d-flex align-items-center">
+                        <div class="d-flex align-items-center">
+                            <p class="my-0 Tajawal-Bold fs-25 blue-txt-color">تاريخ الإصدار</p>
+                            <p class="my-0 Tajawal-Bold fs-25 me-3">{{orderData?.created_at.split('T')[0]}}</p>
+                        </div>
+                        <div class="d-flex align-items-center mx-5">
+                            <p class="my-0 Tajawal-Bold fs-25 blue-txt-color">وقت الإصدار</p>
+                            <p class="my-0 Tajawal-Bold fs-25 me-3">{{orderData?.created_at.split('T')[1].split('.')[0]}}</p>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-12 col-lg-5 btn-action my-2 my-lg-0">
+                    <a class="btn download-reciet-btn Tajawal-Bold fs-25">تحميل الفاتورة
+                        <i class="pi pi-download me-5 fs-3"></i>
+                    </a>
+                </div>
+             </div>
+             <!-- End Row For Reciet Order -->
+
+            <!-- Row For payment Order Details -->
+            <div class="row col-container align-items-center mt-30">
+                <div class="col-sm-12 col-md-12 col-lg-7 reciet-detail">
+                    <div class="d-flex align-items-center">
+                        <p class="Tajawal-Bold fs-25 blue-txt-color my-0">تأكيد التوصيل</p>
+                    </div>
+                    <div class="d-flex align-items-center mt-2">
+                        <div class="d-flex align-items-center">
+                            <p class="my-0 Tajawal-Bold fs-25 blue-txt-color">تاريخ التوصيل</p>
+                            <p class="my-0 Tajawal-Bold fs-25 me-3">{{orderData?.created_at.split('T')[0]}}</p>
+                        </div>
+                        <div class="d-flex align-items-center me-5">
+                            <p class="my-0 Tajawal-Bold fs-25 blue-txt-color">وقت التوصيل</p>
+                            <p class="my-0 Tajawal-Bold fs-25 me-3">{{orderData?.created_at.split('T')[1].split('.')[0]}}</p>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-12 col-lg-5 upload-img-detail d-flex flex-column justify-content-center align-items-center my-2 my-lg-0">
+                    <p class="my-0 Tajawal-Bold fs-25 text-danger">الرجاء ارفاق صورة توصيل الطلب</p>
+                    <div class="upload-image-container mt-3">
+                        <label class="Tajawal-Bold fs-16" for="upload-img">Select Image</label>
+                        <input type="file" name="reciet_img" id="upload-img" accept="*">
+                    </div>
+                </div>
+             </div>
+            <!-- End Row For payment Order Details -->
+
+            <!-- Row For delievery Order Details -->
+            <div class="row col-container align-items-center mt-30">
+                <div class="col-sm-12 col-md-12 col-lg-7 reciet-detail">
+                    <p class="Tajawal-Bold fs-25 blue-txt-color">تأكيد التوصيل</p>
+                    <div class="d-flex align-items-center">
+                        <div class="d-flex align-items-center">
+                            <p class="my-0 Tajawal-Bold fs-25 blue-txt-color">تاريخ التوصيل</p>
+                            <p class="my-0 Tajawal-Bold fs-25 me-3">{{orderData?.created_at.split('T')[0]}}</p>
+                        </div>
+                        <div class="d-flex align-items-center me-5">
+                            <p class="my-0 Tajawal-Bold fs-25 blue-txt-color">وقت التوصيل</p>
+                            <p class="my-0 Tajawal-Bold fs-25 me-3">{{orderData?.created_at.split('T')[1].split('.')[0]}}</p>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-12 col-lg-5 img-detail d-flex align-items-center my-2 my-lg-0">
+                    <div (click)="showDialog()" class="image-container position-relative mx-3">
+                            <img src="assets/dummy.png" alt="img">
+                            <div class="img-overlay d-flex justify-content-center align-items-center">
+                                <i class="pi pi-search-plus text-white fs-2"></i>
+                            </div>
+                    </div>
+                    <p-dialog [(visible)]="visible" [modal]="true" [style]="{ width: '50vw' }" [draggable]="false" [resizable]="false">
+                        <img src="assets/dummy.png" width="100%" alt="img">
+                    </p-dialog>
+                </div>
+            </div>
+            <!-- End Row For delievery Order Details -->
+
+            <!-- Row For confirm payment -->
+            <div class="row col-container align-items-center mt-30">
+                <div class="col-sm-12 col-md-12 col-lg-5 reciet-detail">
+                    <div class="d-flex align-items-center">
+                        <p class="Tajawal-Bold fs-25 green-txt-color my-0">قام بالدفع</p>
+                        <p class="Tajawal-Bold fs-25 my-0 me-3">{{orderData?.client}}</p>
+                    </div>
+                    <p class="Tajawal-Bold fs-25 blue-txt-color mt-30">تأكيد التوصيل</p>
+                    <div class="d-flex align-items-center">
+                        <div class="d-flex align-items-center">
+                            <p class="my-0 Tajawal-Bold fs-25 blue-txt-color">تاريخ التوصيل</p>
+                            <p class="my-0 Tajawal-Bold fs-25 me-3">{{orderData?.created_at.split('T')[0]}}</p>
+                        </div>
+                        <div class="d-flex align-items-center me-5">
+                            <p class="my-0 Tajawal-Bold fs-25 blue-txt-color">وقت التوصيل</p>
+                            <p class="my-0 Tajawal-Bold fs-25 me-3">{{orderData?.created_at.split('T')[1].split('.')[0]}}</p>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-12 col-lg-4 img-detail  text-center px-3 my-2 my-lg-0">
+                    <p class="Tajawal-Bold fs-22 green-txt-color">إيصال الطلب</p>
+                    <div (click)="showDialog()" class="image-container position-relative mx-auto" style="width: fit-content;">
+                            <img src="assets/dummy.png" alt="img">
+                            <div class="img-overlay d-flex justify-content-center align-items-center">
+                                <i class="pi pi-search-plus text-white fs-2"></i>
+                            </div>
+                    </div>
+                    <p-dialog [(visible)]="visible" [modal]="true" [style]="{ width: '50vw' }" [draggable]="false" [resizable]="false">
+                        <img src="assets/dummy.png" width="100%" alt="img">
+                    </p-dialog>
+                </div>
+
+                <div class="col-sm-12 col-md-12 col-lg-3 my-2 my-lg-0 btn-action">
+                    <p class="Tajawal-Bold fs-22 text-danger my-0">لا تقم بالضغط على هذا الزر إلا عند قيام العميل بتحويل المبلغ إلى حسابكم..</p>
+                    <button class="confirm-payment-btn Tajawal-Medium fs-25 mt-30 mx-auto mt-3">قام العميل بتحويل المبلغ</button>
+                </div>
+            </div>
+            <!-- End Row For confirm payment -->
+
+            <!-- Row For Reciet Order -->
+            <div class="row col-container mt-30 align-items-center">
+                <div class="col-sm-12 col-md-12 col-lg-7 reciet-detail">
+                    <p class="Tajawal-Bold fs-25 blue-txt-color">فاتورة الطلب</p>
+                    <div class="d-flex align-items-center">
+                        <div class="d-flex align-items-center">
+                            <p class="my-0 Tajawal-Bold fs-25 blue-txt-color">تاريخ الإصدار</p>
+                            <p class="my-0 Tajawal-Bold fs-25 me-3">{{orderData?.created_at.split('T')[0]}}</p>
+                        </div>
+                        <div class="d-flex align-items-center mx-5">
+                            <p class="my-0 Tajawal-Bold fs-25 blue-txt-color">وقت الإصدار</p>
+                            <p class="my-0 Tajawal-Bold fs-25 me-3">{{orderData?.created_at.split('T')[1].split('.')[0]}}</p>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-12 col-lg-5 btn-action my-2 my-lg-0">
+                    <a class="btn download-reciet-btn Tajawal-Bold fs-25">تحميل فاتورة مرتجع
+                        <i class="pi pi-download me-5 fs-3"></i>
+                    </a>
+                </div>
+             </div>
+             <!-- End Row For Reciet Order -->
+
         </div>
     </div>
 </div>
